; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_config_file.c_write_line.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_config_file.c_write_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.write_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.write_data*, i8*, i64)* @write_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_line(%struct.write_data* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.write_data*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.write_data* %0, %struct.write_data** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.write_data*, %struct.write_data** %4, align 8
  %8 = getelementptr inbounds %struct.write_data, %struct.write_data* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = call i32 @write_line_to(i32 %9, i8* %10, i64 %11)
  ret i32 %12
}

declare dso_local i32 @write_line_to(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
